fix(variable filter): prevent title from overflow, add title tooltip
related to OPT-6485

--- a/client/src/components/Dashboards/filters/FiltersView.scss
+++ b/client/src/components/Dashboards/filters/FiltersView.scss
@@ -81,8 +81,6 @@
   }
 
   > .VariableFilter__Dashboard {
-    width: max-content;
-
     .BooleanFilter,
     .SelectionFilter,
     .DateFilter__Dashboard {
